<resources>
    <string name="app_name">Binimoy</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="message">Message</string>
    <string name="share">Share</string>
    <string name="exchange">Exchange</string>
    <string name="lostFound">Lost and Found</string>
    <string name="studyMeterial">Study Material</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string-array name="deptName">
        <item>Setect your Dept</item>
        <item>CSE</item>
        <item>EEE</item>
        <item>BBA</item>
        <item>NTFE</item>
        <item>PHARM</item>
        <item>SWE</item>
        <item>ARC</item>
        <item>ETE</item>
    </string-array>
    <string-array name="semester">
        <item>Select Semester</item>
        <item>1st Semester</item>
        <item>2nd Semester</item>
        <item>3rd Semester</item>
        <item>4th Semester</item>
        <item>5th Semester</item>
        <item>6th Semester</item>
        <item>7th Semester</item>
        <item>8th Semester</item>
        <item>9th Semester</item>
        <item>10th Semester</item>
        <item>11th Semester</item>
        <item>12th Semester</item>
    </string-array>
    <!--   <string-array name="shareType">
        <item>Gadget item</item>
        <item>Academic item</item>
    </string-array>-->
    <string-array name="shareProductName">
        <item>Mobile</item>
        <item>Mouse</item>
        <item>Book</item>
        <item>Calculator</item>
        <item>Watch</item>
        <item>Pendrive</item>
        <item>RAM</item>
        <item>Keyboard</item>
        <item>USB</item>
        <item>HDMI</item>
        <item>Charger</item>
        <item>Notes</item>
        <item>Headphone</item>
        <item>External HDD</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
